--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,23 @@ services:
     image: docker.elastic.co/kibana/kibana:5.6.0
     volumes:
       - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
-    ports:
-      - 5601:5601
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     links:
       - elasticsearch
+
+  oauth2_proxy:
+    image: wlatanowicz/docker-oauth2_proxy:v2.1.1
+    environment:
+      - OAUTH2_PROXY_CLIENT_ID
+      - OAUTH2_PROXY_CLIENT_SECRET
+      - OAUTH2_PROXY_COOKIE_SECRET
+      - OAUTH2_PROXY_UPSTREAM=http://kibana:5601/
+      - OAUTH2_PROXY_COOKIE_SECURE=false
+      - OAUTH2_PROXY_AUTHENTICATED_EMAILS_FILE=/emails.txt
+    volumes:
+      - ./config/proxy_emails.txt:/emails.txt:ro
+    ports:
+      - 80:4180
+    links:
+      - kibana
