mock fix, time from server

--- a/ws-server/Dockerfile
+++ b/ws-server/Dockerfile
@@ -5,8 +5,10 @@ RUN apk update \
 
 WORKDIR /server
 
-COPY . .
+ADD requirements.txt requirements.txt
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
 
 CMD python server.py
